--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <main class="center" aria-label="Coming soon page">
     <div class="stack">
       <div class="gamma-wrap" aria-hidden="true">
-        <div class="gamma">γ</div>
+        <div class="gamma">Γ</div>
       </div>
 
       <h1>Button Incremental Infinity Wiki</h1>
@@ -168,7 +168,7 @@
 
       <div class="tag" role="status" aria-live="polite">
         <span class="dot" aria-hidden="true"></span>
-        Hyperspace syncing… stay tuned
+        Gamma runes forming… stay tuned
       </div>
     </div>
   </main>
